logs/typepad.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/batchhttp'...
Compiling './lib/python3.5/site-packages/batchhttp/multipart.py'...
***   File "./lib/python3.5/site-packages/batchhttp/multipart.py", line 286
    print batch_request
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/batchhttp-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/oauth'...
Listing './lib/python3.5/site-packages/oauth-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/remoteobjects'...
Listing './lib/python3.5/site-packages/remoteobjects-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/typepad'...
Compiling './lib/python3.5/site-packages/typepad/fields.py'...
***   File "./lib/python3.5/site-packages/typepad/fields.py", line 77
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/typepad/tpclient.py'...
***   File "./lib/python3.5/site-packages/typepad/tpclient.py", line 201
    print fill("""To join your application %r, follow this link and click "Allow":"""
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/typepad/tpobject.py'...
***   File "./lib/python3.5/site-packages/typepad/tpobject.py", line 148
    except BatchError, ex:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/typepad-2.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
